<resources>
    <string name="app_name">HajjWay</string>
    <string name="how_many_people_with_you">How many people along with you?</string>
    <string name="only_me">Only me</string>
    <string name="locate_me">Locate me</string>
    <string name="how_many_person_you_are">How many persons you are?</string>
    <string name="please_enter_a_valid_number">Please enter a valid number, between 1 to 100</string>
    <string name="gps_network_not_enabled">GPS network not enabled</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_maps">Finding your location</string>
    <string name="basic_info">Basic Info</string>
    <string name="title_activity_maps2">Map</string>
    <string name="select_your_destination">What you want to do?</string>
    <string name="going_to_jamarat_location">Going to Jamarat bridge</string>
    <string name="error_connectivity">An error has been happened while connecting to the internet. Please try again.</string>
    <string name="start">Start</string>
    <string name="please_select_route">Please select a route</string>
    <string name="app_name_2">HajjWay</string>
    <string name="good">Best</string>
    <string name="danger">DANGER</string>
    <string name="crowd">Crowd</string>
    <string name="detour">Detour</string>
    <string name="lets_go">Lets Go</string>
    <string name="number_of_traveller">Number of Travellers</string>
    <string name="please_enter_the_number_of_traveller">Please enter the number of travellers</string>
    <string name="best_route">Best route</string>
    <string name="error_select_at_least_aroad">Please select a route to continue</string>
    <string name="congestion">Congestion</string>
    <string name="slow_zone">Slow Zone</string>
    <string name="medical_emergency">Medical Emergency</string>
    <string name="fire">Fire</string>
    <string name="has_feedback">Has Feedback?</string>
    <string name="thank_you_for_submitting">Thank you for the feedback.</string>
    <string name="text_report">Finish your trip</string>
    <string name="you_did_it">You did it</string>
    <string name="ok">Ok</string>
    <string name="good_2">Good</string>
</resources>
