<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_good"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_like_2"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/good_2"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_tutrle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_turtle2"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/slow_zone"
            android:textColor="@android:color/black"
            android:textSize="14sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/ic_plus"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/medical_emergency"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_fire"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@drawable/ic_fire"
            android:padding="20dp"
            android:drawablePadding="10dp"
            android:text="@string/fire"
            android:textColor="@android:color/black"
            android:textSize="14sp" />


    </LinearLayout>


</LinearLayout>