<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f03838">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_km"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="test"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/circle"


            />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="test"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/img_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_like" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/img_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_detour" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detour"
                    android:textColor="@android:color/white" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/img_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView

                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_crowd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crowd"
                    android:textColor="@android:color/white" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/img_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView

                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_danger" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/danger"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>