<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MapsActivity" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:visibility="invisible">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/img_refresh"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_refresh_black_24dp"
            android:visibility="invisible" />


    </FrameLayout>

    <LinearLayout
        android:id="@+id/lyt_routes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:layout_marginBottom="16dp"
            android:background="#3f000000"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/please_select_route"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/route_1"
            layout="@layout/item_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />

        <include
            android:id="@+id/route_2"
            layout="@layout/item_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />

        <include
            android:id="@+id/route_3"
            layout="@layout/item_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp" />

        <LinearLayout
            android:id="@+id/lyt_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="#768188"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="#768188"
                android:text="@string/start"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_nav" />
        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/lyt_report"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|start"
        android:layout_margin="30dp"
        android:background="#d0ffffff">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_caution"

            />

    </FrameLayout>

    <TextView
        android:id="@+id/txt_finish_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:background="#ff006c35"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/text_report"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</FrameLayout>
